# participation

./: README.md  pyproject.toml
participation/: participation.py
testdata/: huss.csv
