[project]
name = "participation"
dependencies = [
    "numpy",
]
authors = [
    {name = "Lars Arvestad", email = "arve@math.su.se"},
]
description = "Compute expected number of participants based on self-reported probability of participation."
readme = "README.md"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.scripts]
participation = "participation:participation:main"

